User abort should opt out of cache eviction

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Engines - Server Integration
    • Fully Compatible
    • ALL
    • Bananini - 2025-05-13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Right now aborts will opt out of cache eviction so that threads do not get stuck while aborting - this is currently not the case for user operations and we should change it so that user calls of abort also opt out of cache eviction. 

      I recently wrote a test to create cache pressure, and tried to manually abort however since we entered cache pressure, we got opted into cache eviction and were unable to manually abort and got stuck. 

            Assignee:
            Ruby Chen
            Reporter:
            Ruby Chen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: