SERVER-104444 Opt out of eviction for user aborts  (#35500)

GitOrigin-RevId: 3baedc55007f452da4bd8e867e21dfb2fc6b7db6